fixed spacing on photo

--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ img {
   max-height: 900px;
   align-self: flex-start;
   border-radius: 20px 20px;
-  margin-top: 3.5rem;
+  margin-top: 2.6rem;
 }
 .me {
   grid-column: 2/3;
